<resources>
    <string name="app_name">To-Do Notes</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_complete">Complete Tasks</string>
    <string name="textview_title">Title:</string>
    <string name="tv_description">Description:</string>
    <string name="tv_status">Status</string>
    <string name="complete">Complete</string>
    <string name="open">Open</string>
    <string name="todo">TODO</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="task_complete">Completed Task</string>
    <string name="date">Date</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="search">Search</string>

</resources>